// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createTemplate: CustomElement hoisting its styles and parts 1`] = `
{
  "content": 
"<nested-component exportparts="span:nested-component--span,">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p_ju9u1n{font-weight:bold;}
        </style><span class="nestedLabel__15w1ydc p_ju9u1n" part="span">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
,
  "parts": [],
  "stylesheets": [],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom & hoist styles and part 1`] = `
{
  "content": 
"<nested-component class="nestedComponent_ey8y76 p1rlu8mi p_8mez4t" exportparts="span:nested-component--span,"
part="nested-component S1">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p_ju9u1n{font-weight:bold;}
        </style><span class="nestedLabel__15w1ydc p_ju9u1n" part="span">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
,
  "parts": [
    "nested-component",
    "S1",
  ],
  "stylesheets": [
    ".p1rlu8mi{display:flex;}",
    ".p_8mez4t{flex-direction:column;}",
  ],
}
`;

exports[`createTemplate: CustomElement with styled slotted component 1`] = `
{
  "content": 
"<nested-component class="slottedParagraph_g28n4j p91m869" exportparts="span:nested-component--span,">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p_ju9u1n{font-weight:bold;}
        </style><span class="nestedLabel__15w1ydc p_ju9u1n" part="span">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
    <p slot="nested" part="S2 paragraph">slotted paragraph</p>
</nested-component>"
,
  "parts": [
    "S2",
    "paragraph",
  ],
  "stylesheets": [
    ".p91m869{color:rebeccapurple;}",
  ],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom 1`] = `
{
  "content": 
"<top-component exportparts="paragraph:top-component--paragraph, S2:top-component--S2,"
part="S3">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p91m869{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph_g28n4j p91m869" exportparts="span:nested-component--span,">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .p_ju9u1n{font-weight:bold;}
                </style><span class="nestedLabel__15w1ydc p_ju9u1n" part="span">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested" part="paragraph S2">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
,
  "parts": [
    "S3",
  ],
  "stylesheets": [],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles 1`] = `
{
  "content": 
"<top-component class="topComponent_46img7 p131mv1i" exportparts="paragraph:top-component--paragraph, S2:top-component--S2,">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p91m869{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph_g28n4j p91m869" exportparts="span:nested-component--span,">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .p_ju9u1n{font-weight:bold;}
                </style><span class="nestedLabel__15w1ydc p_ju9u1n" part="span">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested" part="paragraph S2">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
,
  "parts": [],
  "stylesheets": [
    ".p131mv1i{display:block;}",
  ],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles and child 1`] = `
{
  "content": 
"<top-component class="topComponent_46img7 p131mv1i" exportparts="paragraph:top-component--paragraph, S2:top-component--S2,">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p91m869{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph_g28n4j p91m869" exportparts="span:nested-component--span,">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .p_ju9u1n{font-weight:bold;}
                </style><span class="nestedLabel__15w1ydc p_ju9u1n" part="span">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested" part="paragraph S2">slotted paragraph</p>
        </nested-component>
    </template>
    <img class="image__c0ru3k p_mygp1 p_x8x9vx" />
</top-component>"
,
  "parts": [],
  "stylesheets": [
    ".p131mv1i{display:block;}",
    ".p_mygp1{width:100%;}",
    ".p_x8x9vx{aspect-ratio:16 / 9;}",
  ],
}
`;
